Second try for classification

--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -21,7 +21,6 @@
         "def validator(df):\n",
         "    df = df.drop_duplicates()\n",
         "    df = df[~df['text'].isna()]\n",
-        "    df['text'] = df['text'].astype(str)\n",
         "    if 'vectorized' in df.columns.values:\n",
         "        df = df.drop(columns=['vectorized'])\n",
         "    if df.index.duplicated().any():\n",
@@ -48,40 +47,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "rzepa\n",
-            "Configuration finished\n",
-            "Dataset of 14082 samples\n",
-            "0    8468\n",
-            "1    5614\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9971611071682044\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 44/44 [01:52<00:00,  2.56s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "21981 683\n",
-            "Found 6297 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'rzepa'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -99,44 +67,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wyborcza\n",
-            "Configuration finished\n",
-            "Dataset of 11694 samples\n",
-            "0    7000\n",
-            "1    4694\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9965811965811966\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 31/31 [01:41<00:00,  3.28s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "15314 469\n",
-            "Found 2316 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'wyborcza'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, False)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -150,44 +87,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "gpc\n",
-            "Configuration finished\n",
-            "Dataset of 11696 samples\n",
-            "0    7000\n",
-            "1    4696\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9982905982905983\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 16/16 [00:27<00:00,  1.70s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "7531 304\n",
-            "Found 2148 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'gpc'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, False)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -201,44 +107,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "polityka\n",
-            "Configuration finished\n",
-            "Dataset of 18921 samples\n",
-            "0    9734\n",
-            "1    9187\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9963021658742737\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 3/3 [00:09<00:00,  3.08s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1046 149\n",
-            "Found 654 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'polityka'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -259,44 +134,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "dorzeczy\n",
-            "Configuration finished\n",
-            "Dataset of 17711 samples\n",
-            "0    8954\n",
-            "1    8757\n",
-            "Name: label, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9966139954853274\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 2/2 [00:06<00:00,  3.48s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "688 41\n",
-            "Found 331 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'dorzeczy'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -310,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -318,24 +162,8 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wprost\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
-            "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
-            "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Found 456 files\n"
+            "wprost\n",
+            "Found 445 files\n"
           ]
         }
       ],
@@ -357,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -365,7 +193,21 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "newsweek\n",
+            "newsweek\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+            "  df_rest = pd.read_csv(drive_path / corpus / \"results.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Found 378 files\n"
           ]
         }
@@ -374,7 +216,7 @@
         "corp = 'newsweek'\n",
         "configuration = get_setup(corp)\n",
         "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
-        "df_all = pd.concat([df_rest['words'].drop(index=2051), df_eco])\n",
+        "df_all = pd.concat([df_rest.drop(index=2051), df_eco])\n",
         "df_eco = validator(df_eco)\n",
         "df_all.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -388,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -396,7 +238,23 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wpolityce\n",
+            "wpolityce\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+            "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+            "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Found 398 files\n"
           ]
         }
