--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -24,6 +24,7 @@
         "    if 'vectorized' in df.columns.values:\n",
         "        df = df.drop(columns=['vectorized'])\n",
         "    if df.index.duplicated().any():\n",
+        "        print(\"Duplicated index!!!\")\n",
         "        df = df.reset_index()\n",
         "        df = df.drop(columns = ['id'])\n",
         "        df = df.rename(columns = {'index': 'id'})\n",
@@ -47,9 +48,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "rzepa\n",
+            "Configuration finished\n",
+            "Dataset of 14070 samples\n",
+            "label\n",
+            "0    8464\n",
+            "1    5606\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9964463397299218\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 44/44 [00:59<00:00,  1.35s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "21962 665\n",
+            "Found 6271 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'rzepa'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -67,9 +100,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "wyborcza\n",
+            "Configuration finished\n",
+            "Dataset of 5601 samples\n",
+            "label\n",
+            "0    3000\n",
+            "1    2601\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9910873440285205\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 27/27 [01:25<00:00,  3.17s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "13316 1323\n",
+            "Duplicated index!!!\n",
+            "Found 2924 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'wyborcza'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -87,9 +153,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "gpc\n",
+            "Configuration finished\n",
+            "Dataset of 5842 samples\n",
+            "label\n",
+            "0    3000\n",
+            "1    2842\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9880341880341881\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 15/15 [00:17<00:00,  1.14s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "7498 1235\n",
+            "Duplicated index!!!\n",
+            "Found 3077 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'gpc'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -107,9 +206,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "polityka\n",
+            "Configuration finished\n",
+            "Dataset of 17765 samples\n",
+            "label\n",
+            "0    9097\n",
+            "1    8668\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9926842993809791\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 3/3 [00:05<00:00,  1.70s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1046 156\n",
+            "Found 658 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'polityka'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
@@ -138,9 +269,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "from datetime import datetime\n",
+        "\n",
         "corp = 'dorzeczy'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
         "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
+        "df_eco = df_eco.reset_index().drop(columns='id').rename(columns={'Unnamed: 0': 'id'}).set_index('id')\n",
+        "df_eco = df_eco[df_eco['date'] < datetime(2023, 1, 1)]\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
@@ -154,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -162,8 +297,7 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wprost\n",
-            "Found 445 files\n"
+            "wprost\n"
           ]
         }
       ],
@@ -185,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -208,6 +342,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Duplicated index!!!\n",
             "Found 378 files\n"
           ]
         }
@@ -230,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -255,6 +390,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Duplicated index!!!\n",
             "Found 398 files\n"
           ]
         }
